tests/paczka1/fuzzy1/76909176.err
Error in line 1: Orfp A282 88,6
Error in line 5: SEKYrrYT S455 20,5
Error in line 9: S42% S42% %3,5
Error in line 7: SEKYrrYT S429 58,4
Error in line 8: X4wjsF S530 8,5
Error in line 3: S429 S429 26,2
Error in line 4: Orfp S455 93,8
Error in line 19: 7IqlKux3i S429 649,8
Error in line 26: SEKYrrYT A282 10,2
Error in line 27: Orfp S429 285,8
